# cse100-pa3

./: compressed.txt  decompressed.txt  meson.build
src/: compress.cpp  meson.build  uncompress.cpp
src/bitStream/: meson.build
src/bitStream/input/: BitInputStream.cpp  BitInputStream.hpp  meson.build
src/bitStream/output/: BitOutputStream.cpp  BitOutputStream.hpp  meson.build
src/encoder/: HCNode.hpp  HCTree.cpp  HCTree.hpp  meson.build
test/: meson.build  test_BitInputStream.cpp  test_BitOutputStream.cpp  test_HCTree.cpp
